inputoutput内容更新